--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,7 +89,7 @@ a { text-decoration: none; }
 
 li { list-style: none; }
 
-img, ion-icon, a, button, time, span { display: block; }
+img, ion-icon, a, button, time, span { }
 
 button {
   font: inherit;
