Updating the portfolio design and contents

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,14 +2,14 @@
 
   --bg-gradient-onyx: linear-gradient(
     to bottom right, 
-    hsl(240, 1%, 25%) 3%, 
-    hsl(0, 0%, 42%) 97%
+    hsl(182, 62%, 71%) 3%, 
+    hsl(175, 69%, 46%) 97%
   );
   --bg-gradient-jet: linear-gradient(
     to bottom right, 
-    hsla(240, 1%, 18%, 0.251) 0%, 
-    hsla(240, 2%, 11%, 0) 100%
-  ), hsl(240, 2%, 13%);
+    hsla(192, 95%, 55%, 0.251) 0%, 
+    hsla(192, 37%, 45%, 0) 100%
+  ), hsl(240, 67%, 53%);
   --bg-gradient-yellow-1: linear-gradient(
     to bottom right, 
     hsl(45, 100%, 71%) 0%, 
@@ -36,8 +36,8 @@
   --white-2: hsl(0, 0%, 98%);
   --orange-yellow-crayola: hsl(45, 100%, 72%);
   --vegas-gold: hsl(45, 54%, 58%);
-  --light-gray: hsl(0, 0%, 84%);
-  --light-gray-70: hsla(0, 0%, 84%, 0.7);
+  --light-gray: hsl(182, 34%, 62%);
+  --light-gray-70: hsla(181, 51%, 79%, 0.459);
   --bittersweet-shimmer: hsl(0, 43%, 51%);
 
 
@@ -135,7 +135,6 @@ article {
 
 .icon-box {
   position: relative;
-  background: var(--border-gradient-onyx);
   width: 30px;
   height: 30px;
   border-radius: 8px;
@@ -143,7 +142,7 @@ article {
   justify-content: center;
   align-items: center;
   font-size: 16px;
-  color: var(--onyx);
+
   box-shadow: var(--shadow-2);
   z-index: 1;
 }
@@ -152,7 +151,7 @@ article {
   content: "";
   position: absolute;
   inset: 1px;
-  background: hsla(0, 1%, 71%, 0.75);
+  background: hsla(180, 52%, 34%, 0.564);
   border-radius: inherit;
   z-index: -1;
 }
@@ -202,7 +201,7 @@ article.active {
   left: 0;
   width: 30px;
   height: 3px;
-  background: hsl(0, 0%, 22%);
+  background: hsla(180, 52%, 34%, 0.564);
   border-radius: 3px;
 }
 
@@ -292,7 +291,7 @@ main {
 
 .info-content .title {
   color: var(--onyx);
-  background: hsla(0, 1%, 71%, 0.75);
+  background: hsla(180, 52%, 34%, 0.564);
   font-size: var(--fs-8);
   font-weight: var(--fw-300);
   width: max-content;
@@ -399,7 +398,7 @@ main {
   bottom: 0;
   left: 0;
   width: 100%;
-  background: hsla(0, 1%, 71%, 0.75);
+  background: hsla(180, 52%, 34%, 0.564);
   backdrop-filter: blur(10px);
   border-radius: 12px 12px 0 0;
   box-shadow: var(--shadow-3);
@@ -456,7 +455,6 @@ main {
 
 .service-item {
   position: relative;
-  background: hsla(0, 1%, 78%, 0.75);
   padding: 20px;
   border-radius: 14px;
   box-shadow: var(--shadow-2);
@@ -467,7 +465,7 @@ main {
   content: "";
   position: absolute;
   inset: 1px;
-  background: hsla(0, 1%, 71%, 0.75);
+  background: hsla(180, 52%, 34%, 0.564);
   border-radius: inherit;
   z-index: -1;
 }
@@ -1039,6 +1037,10 @@ color: hsl(0, 0%, 22%); }
     justify-content: center;
     align-items: stretch;
     gap: 25px;
+  }
+
+  .c-footer__waves-item.item-01{
+    animation: linear 9000ms none infinite running erEovC;
   }
 
   .main-content {
