--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@
   --orange-yellow-crayola: hsl(45, 100%, 72%);
   --vegas-gold: hsl(45, 54%, 58%);
   --light-gray: hsl(182, 34%, 62%);
-  --light-gray-70: hsla(181, 51%, 79%, 0.459);
+  --light-gray-70: #F2E9E4;
   --bittersweet-shimmer: hsl(0, 43%, 51%);
 
 
